Preparing to solve "Robot in a grid"
I don't quite understand. It seems more of a BFS-search than a
dynamic programming thing. Or maybe it's both but I would approach
it in this way. I dunno, man.

--- a/CtCI/dynamic_programming/CMakeLists.txt
+++ b/CtCI/dynamic_programming/CMakeLists.txt
@@ -3,4 +3,5 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Include sub-projects.
-add_subdirectory ("triple_step")
+add_subdirectory("triple_step")
+add_subdirectory("robot_in_a_grid")
