Created basic binary tree loading + Iterative post-traversal

--- a/CtCI/CMakeLists.txt
+++ b/CtCI/CMakeLists.txt
@@ -4,3 +4,4 @@ cmake_minimum_required (VERSION 3.8)
 
 # Include all the categories here.
 add_subdirectory ("dynamic_programming")
+add_subdirectory ("trees_and_graphs")
